--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cash2loan-frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8082/api/v1",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
@@ -12,7 +13,8 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "date-fns": "^2.28.0"
   },
   "scripts": {
     "start": "react-scripts start",
