--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cash2loan-frontend",
   "version": "0.1.0",
+  "proxy": "http://localhost:8082/api/v1",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.2",
